--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <h1>Flappy Bird</h1>   
     <div flappyzinho></div>
     <script src="script.js"></script>
+    <script src="teste.js"></script>
 </body>
 </html>
